tests/ui/nll/ice-106874.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/ice-106874.rs:8:5
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'0 mut V)` must implement `FnOnce<(&mut V,)>`, for some specific lifetime `'0`...
   = note: ...but it actually implements `FnOnce<(&'1 mut V,)>`, for some specific lifetime `'1`

error: implementation of `FnOnce` is not general enough
  --> $DIR/ice-106874.rs:8:5
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'0 mut V)` must implement `FnOnce<(&mut V,)>`, for some specific lifetime `'0`...
   = note: ...but it actually implements `FnOnce<(&'1 mut V,)>`, for some specific lifetime `'1`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/ice-106874.rs:8:5
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/ice-106874.rs:8:5
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: implementation of `FnOnce` is not general enough
  --> $DIR/ice-106874.rs:8:7
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 mut V)` must implement `FnOnce<(&'1 mut V,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 mut V,)>`, for some specific lifetime `'2`

error: implementation of `Fn` is not general enough
  --> $DIR/ice-106874.rs:8:7
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 mut V)` must implement `Fn<(&'1 mut V,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `Fn<(&'2 mut V,)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> $DIR/ice-106874.rs:8:7
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 mut V)` must implement `FnOnce<(&'1 mut V,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 mut V,)>`, for some specific lifetime `'2`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: implementation of `Fn` is not general enough
  --> $DIR/ice-106874.rs:8:7
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 mut V)` must implement `Fn<(&'1 mut V,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `Fn<(&'2 mut V,)>`, for some specific lifetime `'2`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: implementation of `FnOnce` is not general enough
  --> $DIR/ice-106874.rs:8:7
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 mut V)` must implement `FnOnce<(&'1 mut V,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 mut V,)>`, for some specific lifetime `'2`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: implementation of `Fn` is not general enough
  --> $DIR/ice-106874.rs:8:7
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 mut V)` must implement `Fn<(&'1 mut V,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `Fn<(&'2 mut V,)>`, for some specific lifetime `'2`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0310]: the parameter type `V` may not live long enough
  --> $DIR/ice-106874.rs:8:23
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |                       ^^^^^^^^^^^^^^^
   |                       |
   |                       the parameter type `V` must be valid for the static lifetime...
   |                       ...so that the type `V` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | pub fn func<V: 'static, F: Fn(&mut V)>(f: F) -> A<impl X> {
   |              +++++++++

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0310`.
